--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.rolltech</groupId>
-        <artifactId>spring-social</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
-    </parent>
-
-    <groupId>com.rolltech</groupId>
+    <groupId>studio.bitcat</groupId>
     <artifactId>spring-social-tencent-weibo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>spring-social-tencent-weibo</name>
